force-app/main/default/objects/Inventory_Item__c/fields/Inventory_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Warehouse</label>
    <referenceTo>Inventory_Warehouse__c</referenceTo>
    <relationshipLabel>Inventory items</relationshipLabel>
    <relationshipName>Inventory_items</relationshipName>
    <type>Lookup</type>
</CustomField>