force-app/main/default/objects/Inventory_Item__c/fields/Item_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Unit_Cost__c</fullName>
    <label>Item Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>