force-app/main/default/objects/Inventory_Item__c/fields/Unit_Master__c.field-meta.xml
<CustomField>
    <fullName>Unit_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Master</label>
    <referenceTo>Unit_Master__c</referenceTo>
    <relationshipLabel>Inventory items</relationshipLabel>
    <relationshipName>Inventory_items</relationshipName>
    <type>Lookup</type>
</CustomField>