force-app/main/default/objects/Inventory_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Code__c</columns>
    <columns>Item_Unit_Cost__c</columns>
    <columns>Unit_Master__c</columns>
    <columns>Inventory_Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>